<resources>

    <!-- ################################################################################ -->
    <!--                                    GENERAL                                       -->
    <!-- ################################################################################ -->

    <string name="app_name">Code Buster</string>
    <string name="action_settings">Settings</string>
    <string name="activity_splash_button_begin">Begin</string>
    <string name="title_activity_splash">Code Buster</string>
    <string name="header_activity_game_play">Game Play:</string>
    <string name="splash_activity_game_play_body">The game is similar to the old MasterMind game from the \'70s where two players try to guess a colored ball sequence in less turns than their opponent. This game, however, uses numbers (0-9) instead of colored balls with four slots. If you choose a correct number you will see a <font color="#666666">\"Gray\"</font> circle in the results list. If that same number is in the correct spot you will see a <font color="#00FF00">\"Green\"</font> circle. The game is over when you choose all four correct numbers and in their correct order (all <font color="#00FF00">\"Green\"</font> circles). A twist: this game is timed. If you finish quickly (few turns - less time) your score will be high and the reverse is true for a lower score. Good luck!</string>
    <string name="title_activity_main">Code Buster</string>
    <string name="activity_main_button_ok">OK</string>
    <string name="ign_input_hint">Enter a User Name</string>
    <string name="ign_input_submit">Get Scores</string>
    <string name="ign_input_screen_congratulations">Congratulations, you WON!!!</string>
    <string name="ign_input_screen_description">Enter your name below to see where you stand with other Code Busters.</string>
    <string name="title_activity_get_scores">GetScoresActivity</string>
    <string name="get_scores_play_again_button">Play Again</string>
    <string name="get_scores_no_internet_connection">You must have an internet connection to see the high scores.</string>
    <string name="no_internet_connection_error">You don\'t have an internet connection.</string>


    <!-- ################################################################################ -->
    <!--                                 AUTHENTICATION                                   -->
    <!-- ################################################################################ -->

    <!-- Authenticator activity - GENERAL -->
    <string name="auth_type">com.greggscoolapps</string>
    <string name="authentication_skipping">skipped</string>

    <string name="row_image_view">img</string>

    <!-- Authenticator activity - STATE DESCRIPTIONS -->
    <string name="state_get_account_info_description">Getting account info</string>
    <string name="state_verifying_account">Verifying account</string>
    <string name="state_storing_account">Storing account</string>
    <string name="state_storing_score">Storing score</string>

    <!-- Authenticator activity - LOGIN DIALOG -->
    <string name="header_text">Account Login</string>
    <string name="hint_username_input_text">Username</string>
    <string name="hint_password_input_text">Password</string>
    <string name="hint_remember_me_checkbox">Remember me</string>
    <string name="button_text_login_create">Login/Create account</string>
    <string name="button_text_login_cancel">Not now</string>
    <string name="login_fail_validity">Only \"Letters\" and \"Numbers\" are allowed for your Username/Password.</string>
    <string name="login_fail_empty_strings">Both Username and Password are required.</string>
    <string name="login_fail_text_length">Your Username and Password must be at least 8 characters and no more than 16 characters long.</string>


    <!-- ################################################################################ -->
    <!--                                      DATA                                        -->
    <!-- ################################################################################ -->

    <!-- User's Data key. This string is used as the key for UserData that is passed from -->
    <!-- one class to another (ie; getIntent().getSerializableExtra(KEY_USER_DATA)). It   -->
    <!-- represents the UserData class where all of the pertinent user data is stored     -->
    <!-- (ie; score...).                                                                  -->
    <string name="KEY_USER_DATA">user_data</string>

    <!-- Url strings -->
    <!-- <string name="url_header">http://api.greggscoolapps.com/</string> -->
    <string name="url_header">http://192.168.1.150/webservice/</string>
    <string name="url_tail_splash">codebuster_miscdata.php</string>
    <string name="url_tail_verify_credentials">verify_credentials.php</string>
    <string name="url_tail_submit_scores">codebuster_submitscores.php</string>
    <string name="url_tail_get_high_scores">codebuster_getscores.php</string>

    <!-- Error strings -->
    <string name="query_params_missing">ERROR: One or more query params are missing.</string>
    <string name="query_timed_out">ERROR: The request timed out. Maybe your internet connection?</string>
    <string name="result_empty">ERROR: \"result\" was either null or empty!!</string>
    <string name="login_failed_password">Login failed. The password you entered is incorrect.</string>
    <string name="insert_query_failed">ERROR: The insert statement failed!!</string>

</resources>
